# Flux-Charge-Symmetric-Circuits

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  fluxcharge-gui.spec  pyproject.toml
.claude/: settings.local.json
.github/workflows/: tests.yml
examples/: build_from_scratch.ipynb  circulator.txt  circulator_jj.py  compare_scqubits.py  draw_circuit.py  duality.ipynb  fluxonium.txt  lc_oscillator.py  lc_oscillator.txt  measurements.ipynb  numerical_spectrum.py  qps_inductor.txt  qubit_library.py  qutip_export.ipynb  reproduce_manuscript.py  schematic.py  scqubits_import.ipynb  transmon.txt  tutorial.ipynb
examples/scqubits/: fluxonium.yaml  transmon.yaml
fluxcharge/: __init__.py  __main__.py  canonicalize.py  circuit.py  coherence.py  elements.py  gui.py  interactive.py  interop.py  library.py  netlist.py  numerics.py  observables.py  plotting.py  reduction.py  schematic.py  topology.py  transformations.py  units.py  visualize.py
packaging/: app_entry.py
tests/: test_example.py
